src/parser/bison_parser.output
Terminals unused in grammar

   PARAMETERS
   TEMPORARY
   TIMESTAMP
   NVARCHAR
   RESTRICT
   ANALYZE
   BETWEEN
   CASCADE
   COLUMNS
   CONTROL
   DEFAULT
   EXPLAIN
   HISTORY
   NATURAL
   PRIMARY
   SCHEMAS
   SPATIAL
   VIRTUAL
   BEFORE
   COLUMN
   DIRECT
   ESCAPE
   GLOBAL
   ISNULL
   RENAME
   SCHEMA
   SORTED
   TABLES
   UNIQUE
   UNLOAD
   AFTER
   ALTER
   CROSS
   DELTA
   INDEX
   LOCAL
   MERGE
   MINUS
   USING
   CALL
   DATE
   FULL
   HASH
   HINT
   LOAD
   NULL
   PART
   PLAN
   SHOW
   TIME
   VIEW
   WITH
   ADD
   ALL
   FOR
   KEY
   OFF
   TOP
   IN
   IS
   OF
   TO
   EQUALS
   LESS
   GREATER
   NOTNULL
   UMINUS
   '['
   ']'


Grammar

    0 $accept: input $end

    1 input: statement_list opt_semicolon

    2 statement_list: statement
    3               | statement_list ';' statement

    4 statement: prepare_statement
    5          | preparable_statement

    6 preparable_statement: select_statement
    7                     | import_statement
    8                     | create_statement
    9                     | insert_statement
   10                     | delete_statement
   11                     | truncate_statement
   12                     | update_statement
   13                     | drop_statement
   14                     | execute_statement

   15 prepare_statement: PREPARE IDENTIFIER ':' preparable_statement
   16                  | PREPARE IDENTIFIER '{' statement_list opt_semicolon '}'

   17 execute_statement: EXECUTE IDENTIFIER
   18                  | EXECUTE IDENTIFIER '(' literal_list ')'

   19 import_statement: IMPORT FROM import_file_type FILE file_path INTO table_name

   20 import_file_type: CSV

   21 file_path: string_literal

   22 create_statement: CREATE TABLE opt_not_exists table_name FROM TBL FILE file_path
   23                 | CREATE TABLE opt_not_exists table_name '(' column_def_commalist ')'

   24 opt_not_exists: IF NOT EXISTS
   25               | %empty

   26 column_def_commalist: column_def
   27                     | column_def_commalist ',' column_def

   28 column_def: IDENTIFIER column_type

   29 column_type: INT
   30            | INTEGER
   31            | DOUBLE
   32            | TEXT

   33 drop_statement: DROP TABLE table_name
   34               | DEALLOCATE PREPARE IDENTIFIER

   35 delete_statement: DELETE FROM table_name opt_where

   36 truncate_statement: TRUNCATE table_name

   37 insert_statement: INSERT INTO table_name opt_column_list VALUES '(' literal_list ')'
   38                 | INSERT INTO table_name opt_column_list select_no_paren

   39 opt_column_list: '(' ident_commalist ')'
   40                | %empty

   41 update_statement: UPDATE table_ref_name_no_alias SET update_clause_commalist opt_where

   42 update_clause_commalist: update_clause
   43                        | update_clause_commalist ',' update_clause

   44 update_clause: IDENTIFIER '=' literal

   45 select_statement: select_with_paren
   46                 | select_no_paren

   47 select_with_paren: '(' select_no_paren ')'
   48                  | '(' select_with_paren ')'

   49 select_no_paren: select_clause opt_order opt_limit
   50                | select_clause set_operator select_clause opt_order opt_limit

   51 set_operator: UNION
   52             | INTERSECT
   53             | EXCEPT

   54 select_clause: SELECT opt_distinct select_list from_clause opt_where opt_group

   55 opt_distinct: DISTINCT
   56             | %empty

   57 select_list: expr_list

   58 from_clause: FROM table_ref

   59 opt_where: WHERE expr
   60          | %empty

   61 opt_group: GROUP BY expr_list opt_having
   62          | %empty

   63 opt_having: HAVING expr
   64           | %empty

   65 opt_order: ORDER BY expr opt_order_type
   66          | %empty

   67 opt_order_type: ASC
   68               | DESC
   69               | %empty

   70 opt_limit: LIMIT int_literal
   71          | LIMIT int_literal OFFSET int_literal
   72          | %empty

   73 expr_list: expr_alias
   74          | expr_list ',' expr_alias

   75 literal_list: literal
   76             | literal_list ',' literal

   77 expr_alias: expr opt_alias

   78 expr: '(' expr ')'
   79     | scalar_expr
   80     | unary_expr
   81     | binary_expr
   82     | function_expr

   83 scalar_expr: column_name
   84            | star_expr
   85            | literal

   86 unary_expr: '-' expr
   87           | NOT expr

   88 binary_expr: comp_expr
   89            | expr '-' expr
   90            | expr '+' expr
   91            | expr '/' expr
   92            | expr '*' expr
   93            | expr '%' expr
   94            | expr '^' expr
   95            | expr AND expr
   96            | expr OR expr
   97            | expr LIKE expr
   98            | expr NOT LIKE expr

   99 comp_expr: expr '=' expr
  100          | expr NOTEQUALS expr
  101          | expr '<' expr
  102          | expr '>' expr
  103          | expr LESSEQ expr
  104          | expr GREATEREQ expr

  105 function_expr: IDENTIFIER '(' opt_distinct expr ')'

  106 column_name: IDENTIFIER
  107            | IDENTIFIER '.' IDENTIFIER

  108 literal: string_literal
  109        | num_literal
  110        | placeholder_expr

  111 string_literal: STRING

  112 num_literal: FLOATVAL
  113            | int_literal

  114 int_literal: INTVAL

  115 star_expr: '*'

  116 placeholder_expr: '?'

  117 table_ref: table_ref_atomic
  118          | table_ref_atomic ',' table_ref_commalist

  119 table_ref_atomic: table_ref_name
  120                 | '(' select_statement ')' alias
  121                 | join_clause

  122 table_ref_commalist: table_ref_atomic
  123                    | table_ref_commalist ',' table_ref_atomic

  124 table_ref_name: table_name opt_alias

  125 table_ref_name_no_alias: table_name

  126 table_name: IDENTIFIER
  127           | IDENTIFIER '.' IDENTIFIER

  128 alias: AS IDENTIFIER
  129      | IDENTIFIER

  130 opt_alias: alias
  131          | %empty

  132 join_clause: join_table opt_join_type JOIN join_table ON join_condition

  133 opt_join_type: INNER
  134              | OUTER
  135              | LEFT
  136              | RIGHT
  137              | %empty

  138 join_table: '(' select_statement ')' alias
  139           | table_ref_name

  140 join_condition: expr

  141 opt_semicolon: ';'
  142              | %empty

  143 ident_commalist: IDENTIFIER
  144                | ident_commalist ',' IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'%' (37) 93
'(' (40) 18 23 37 39 47 48 78 105 120 138
')' (41) 18 23 37 39 47 48 78 105 120 138
'*' (42) 92 115
'+' (43) 90
',' (44) 27 43 74 76 118 123 144
'-' (45) 86 89
'.' (46) 107 127
'/' (47) 91
':' (58) 15
';' (59) 3 141
'<' (60) 101
'=' (61) 44 99
'>' (62) 102
'?' (63) 116
'[' (91)
']' (93)
'^' (94) 94
'{' (123) 16
'}' (125) 16
error (256)
IDENTIFIER (258) 15 16 17 18 28 34 44 105 106 107 126 127 128 129 143
    144
STRING (259) 111
FLOATVAL (260) 112
INTVAL (261) 114
NOTEQUALS (262) 100
LESSEQ (263) 103
GREATEREQ (264) 104
DEALLOCATE (265) 34
PARAMETERS (266)
INTERSECT (267) 52
TEMPORARY (268)
TIMESTAMP (269)
DISTINCT (270) 55
NVARCHAR (271)
RESTRICT (272)
TRUNCATE (273) 36
ANALYZE (274)
BETWEEN (275)
CASCADE (276)
COLUMNS (277)
CONTROL (278)
DEFAULT (279)
EXECUTE (280) 17 18
EXPLAIN (281)
HISTORY (282)
INTEGER (283) 30
NATURAL (284)
PREPARE (285) 15 16 34
PRIMARY (286)
SCHEMAS (287)
SPATIAL (288)
VIRTUAL (289)
BEFORE (290)
COLUMN (291)
CREATE (292) 22 23
DELETE (293) 35
DIRECT (294)
DOUBLE (295) 31
ESCAPE (296)
EXCEPT (297) 53
EXISTS (298) 24
GLOBAL (299)
HAVING (300) 63
IMPORT (301) 19
INSERT (302) 37 38
ISNULL (303)
OFFSET (304) 71
RENAME (305)
SCHEMA (306)
SELECT (307) 54
SORTED (308)
TABLES (309)
UNIQUE (310)
UNLOAD (311)
UPDATE (312) 41
VALUES (313) 37
AFTER (314)
ALTER (315)
CROSS (316)
DELTA (317)
GROUP (318) 61
INDEX (319)
INNER (320) 133
LIMIT (321) 70 71
LOCAL (322)
MERGE (323)
MINUS (324)
ORDER (325) 65
OUTER (326) 134
RIGHT (327) 136
TABLE (328) 22 23 33
UNION (329) 51
USING (330)
WHERE (331) 59
CALL (332)
DATE (333)
DESC (334) 68
DROP (335) 33
FILE (336) 19 22
FROM (337) 19 22 35 58
FULL (338)
HASH (339)
HINT (340)
INTO (341) 19 37 38
JOIN (342) 132
LEFT (343) 135
LIKE (344) 97 98
LOAD (345)
NULL (346)
PART (347)
PLAN (348)
SHOW (349)
TEXT (350) 32
TIME (351)
VIEW (352)
WITH (353)
ADD (354)
ALL (355)
AND (356) 95
ASC (357) 67
CSV (358) 20
FOR (359)
INT (360) 29
KEY (361)
NOT (362) 24 87 98
OFF (363)
SET (364) 41
TBL (365) 22
TOP (366)
AS (367) 128
BY (368) 61 65
IF (369) 24
IN (370)
IS (371)
OF (372)
ON (373) 132
OR (374) 96
TO (375)
EQUALS (376)
LESS (377)
GREATER (378)
NOTNULL (379)
UMINUS (380)


Nonterminals, with rules where they appear

$accept (146)
    on left: 0
input (147)
    on left: 1, on right: 0
statement_list (148)
    on left: 2 3, on right: 1 3 16
statement (149)
    on left: 4 5, on right: 2 3
preparable_statement (150)
    on left: 6 7 8 9 10 11 12 13 14, on right: 5 15
prepare_statement (151)
    on left: 15 16, on right: 4
execute_statement (152)
    on left: 17 18, on right: 14
import_statement (153)
    on left: 19, on right: 7
import_file_type (154)
    on left: 20, on right: 19
file_path (155)
    on left: 21, on right: 19 22
create_statement (156)
    on left: 22 23, on right: 8
opt_not_exists (157)
    on left: 24 25, on right: 22 23
column_def_commalist (158)
    on left: 26 27, on right: 23 27
column_def (159)
    on left: 28, on right: 26 27
column_type (160)
    on left: 29 30 31 32, on right: 28
drop_statement (161)
    on left: 33 34, on right: 13
delete_statement (162)
    on left: 35, on right: 10
truncate_statement (163)
    on left: 36, on right: 11
insert_statement (164)
    on left: 37 38, on right: 9
opt_column_list (165)
    on left: 39 40, on right: 37 38
update_statement (166)
    on left: 41, on right: 12
update_clause_commalist (167)
    on left: 42 43, on right: 41 43
update_clause (168)
    on left: 44, on right: 42 43
select_statement (169)
    on left: 45 46, on right: 6 120 138
select_with_paren (170)
    on left: 47 48, on right: 45 48
select_no_paren (171)
    on left: 49 50, on right: 38 46 47
set_operator (172)
    on left: 51 52 53, on right: 50
select_clause (173)
    on left: 54, on right: 49 50
opt_distinct (174)
    on left: 55 56, on right: 54 105
select_list (175)
    on left: 57, on right: 54
from_clause (176)
    on left: 58, on right: 54
opt_where (177)
    on left: 59 60, on right: 35 41 54
opt_group (178)
    on left: 61 62, on right: 54
opt_having (179)
    on left: 63 64, on right: 61
opt_order (180)
    on left: 65 66, on right: 49 50
opt_order_type (181)
    on left: 67 68 69, on right: 65
opt_limit (182)
    on left: 70 71 72, on right: 49 50
expr_list (183)
    on left: 73 74, on right: 57 61 74
literal_list (184)
    on left: 75 76, on right: 18 37 76
expr_alias (185)
    on left: 77, on right: 73 74
expr (186)
    on left: 78 79 80 81 82, on right: 59 63 65 77 78 86 87 89 90 91
    92 93 94 95 96 97 98 99 100 101 102 103 104 105 140
scalar_expr (187)
    on left: 83 84 85, on right: 79
unary_expr (188)
    on left: 86 87, on right: 80
binary_expr (189)
    on left: 88 89 90 91 92 93 94 95 96 97 98, on right: 81
comp_expr (190)
    on left: 99 100 101 102 103 104, on right: 88
function_expr (191)
    on left: 105, on right: 82
column_name (192)
    on left: 106 107, on right: 83
literal (193)
    on left: 108 109 110, on right: 44 75 76 85
string_literal (194)
    on left: 111, on right: 21 108
num_literal (195)
    on left: 112 113, on right: 109
int_literal (196)
    on left: 114, on right: 70 71 113
star_expr (197)
    on left: 115, on right: 84
placeholder_expr (198)
    on left: 116, on right: 110
table_ref (199)
    on left: 117 118, on right: 58
table_ref_atomic (200)
    on left: 119 120 121, on right: 117 118 122 123
table_ref_commalist (201)
    on left: 122 123, on right: 118 123
table_ref_name (202)
    on left: 124, on right: 119 139
table_ref_name_no_alias (203)
    on left: 125, on right: 41
table_name (204)
    on left: 126 127, on right: 19 22 23 33 35 36 37 38 124 125
alias (205)
    on left: 128 129, on right: 120 130 138
opt_alias (206)
    on left: 130 131, on right: 77 124
join_clause (207)
    on left: 132, on right: 121
opt_join_type (208)
    on left: 133 134 135 136 137, on right: 132
join_table (209)
    on left: 138 139, on right: 132
join_condition (210)
    on left: 140, on right: 132
opt_semicolon (211)
    on left: 141 142, on right: 1 16
ident_commalist (212)
    on left: 143 144, on right: 39 144


State 0

    0 $accept: . input $end

    DEALLOCATE  shift, and go to state 1
    TRUNCATE    shift, and go to state 2
    EXECUTE     shift, and go to state 3
    PREPARE     shift, and go to state 4
    CREATE      shift, and go to state 5
    DELETE      shift, and go to state 6
    IMPORT      shift, and go to state 7
    INSERT      shift, and go to state 8
    SELECT      shift, and go to state 9
    UPDATE      shift, and go to state 10
    DROP        shift, and go to state 11
    '('         shift, and go to state 12

    input                 go to state 13
    statement_list        go to state 14
    statement             go to state 15
    preparable_statement  go to state 16
    prepare_statement     go to state 17
    execute_statement     go to state 18
    import_statement      go to state 19
    create_statement      go to state 20
    drop_statement        go to state 21
    delete_statement      go to state 22
    truncate_statement    go to state 23
    insert_statement      go to state 24
    update_statement      go to state 25
    select_statement      go to state 26
    select_with_paren     go to state 27
    select_no_paren       go to state 28
    select_clause         go to state 29


State 1

   34 drop_statement: DEALLOCATE . PREPARE IDENTIFIER

    PREPARE  shift, and go to state 30


State 2

   36 truncate_statement: TRUNCATE . table_name

    IDENTIFIER  shift, and go to state 31

    table_name  go to state 32


State 3

   17 execute_statement: EXECUTE . IDENTIFIER
   18                  | EXECUTE . IDENTIFIER '(' literal_list ')'

    IDENTIFIER  shift, and go to state 33


State 4

   15 prepare_statement: PREPARE . IDENTIFIER ':' preparable_statement
   16                  | PREPARE . IDENTIFIER '{' statement_list opt_semicolon '}'

    IDENTIFIER  shift, and go to state 34


State 5

   22 create_statement: CREATE . TABLE opt_not_exists table_name FROM TBL FILE file_path
   23                 | CREATE . TABLE opt_not_exists table_name '(' column_def_commalist ')'

    TABLE  shift, and go to state 35


State 6

   35 delete_statement: DELETE . FROM table_name opt_where

    FROM  shift, and go to state 36


State 7

   19 import_statement: IMPORT . FROM import_file_type FILE file_path INTO table_name

    FROM  shift, and go to state 37


State 8

   37 insert_statement: INSERT . INTO table_name opt_column_list VALUES '(' literal_list ')'
   38                 | INSERT . INTO table_name opt_column_list select_no_paren

    INTO  shift, and go to state 38


State 9

   54 select_clause: SELECT . opt_distinct select_list from_clause opt_where opt_group

    DISTINCT  shift, and go to state 39

    $default  reduce using rule 56 (opt_distinct)

    opt_distinct  go to state 40


State 10

   41 update_statement: UPDATE . table_ref_name_no_alias SET update_clause_commalist opt_where

    IDENTIFIER  shift, and go to state 31

    table_ref_name_no_alias  go to state 41
    table_name               go to state 42


State 11

   33 drop_statement: DROP . TABLE table_name

    TABLE  shift, and go to state 43


State 12

   47 select_with_paren: '(' . select_no_paren ')'
   48                  | '(' . select_with_paren ')'

    SELECT  shift, and go to state 9
    '('     shift, and go to state 12

    select_with_paren  go to state 44
    select_no_paren    go to state 45
    select_clause      go to state 29


State 13

    0 $accept: input . $end

    $end  shift, and go to state 46


State 14

    1 input: statement_list . opt_semicolon
    3 statement_list: statement_list . ';' statement

    ';'  shift, and go to state 47

    $default  reduce using rule 142 (opt_semicolon)

    opt_semicolon  go to state 48


State 15

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


State 16

    5 statement: preparable_statement .

    $default  reduce using rule 5 (statement)


State 17

    4 statement: prepare_statement .

    $default  reduce using rule 4 (statement)


State 18

   14 preparable_statement: execute_statement .

    $default  reduce using rule 14 (preparable_statement)


State 19

    7 preparable_statement: import_statement .

    $default  reduce using rule 7 (preparable_statement)


State 20

    8 preparable_statement: create_statement .

    $default  reduce using rule 8 (preparable_statement)


State 21

   13 preparable_statement: drop_statement .

    $default  reduce using rule 13 (preparable_statement)


State 22

   10 preparable_statement: delete_statement .

    $default  reduce using rule 10 (preparable_statement)


State 23

   11 preparable_statement: truncate_statement .

    $default  reduce using rule 11 (preparable_statement)


State 24

    9 preparable_statement: insert_statement .

    $default  reduce using rule 9 (preparable_statement)


State 25

   12 preparable_statement: update_statement .

    $default  reduce using rule 12 (preparable_statement)


State 26

    6 preparable_statement: select_statement .

    $default  reduce using rule 6 (preparable_statement)


State 27

   45 select_statement: select_with_paren .

    $default  reduce using rule 45 (select_statement)


State 28

   46 select_statement: select_no_paren .

    $default  reduce using rule 46 (select_statement)


State 29

   49 select_no_paren: select_clause . opt_order opt_limit
   50                | select_clause . set_operator select_clause opt_order opt_limit

    INTERSECT  shift, and go to state 49
    EXCEPT     shift, and go to state 50
    ORDER      shift, and go to state 51
    UNION      shift, and go to state 52

    $default  reduce using rule 66 (opt_order)

    set_operator  go to state 53
    opt_order     go to state 54


State 30

   34 drop_statement: DEALLOCATE PREPARE . IDENTIFIER

    IDENTIFIER  shift, and go to state 55


State 31

  126 table_name: IDENTIFIER .
  127           | IDENTIFIER . '.' IDENTIFIER

    '.'  shift, and go to state 56

    $default  reduce using rule 126 (table_name)


State 32

   36 truncate_statement: TRUNCATE table_name .

    $default  reduce using rule 36 (truncate_statement)


State 33

   17 execute_statement: EXECUTE IDENTIFIER .
   18                  | EXECUTE IDENTIFIER . '(' literal_list ')'

    '('  shift, and go to state 57

    $default  reduce using rule 17 (execute_statement)


State 34

   15 prepare_statement: PREPARE IDENTIFIER . ':' preparable_statement
   16                  | PREPARE IDENTIFIER . '{' statement_list opt_semicolon '}'

    ':'  shift, and go to state 58
    '{'  shift, and go to state 59


State 35

   22 create_statement: CREATE TABLE . opt_not_exists table_name FROM TBL FILE file_path
   23                 | CREATE TABLE . opt_not_exists table_name '(' column_def_commalist ')'

    IF  shift, and go to state 60

    $default  reduce using rule 25 (opt_not_exists)

    opt_not_exists  go to state 61


State 36

   35 delete_statement: DELETE FROM . table_name opt_where

    IDENTIFIER  shift, and go to state 31

    table_name  go to state 62


State 37

   19 import_statement: IMPORT FROM . import_file_type FILE file_path INTO table_name

    CSV  shift, and go to state 63

    import_file_type  go to state 64


State 38

   37 insert_statement: INSERT INTO . table_name opt_column_list VALUES '(' literal_list ')'
   38                 | INSERT INTO . table_name opt_column_list select_no_paren

    IDENTIFIER  shift, and go to state 31

    table_name  go to state 65


State 39

   55 opt_distinct: DISTINCT .

    $default  reduce using rule 55 (opt_distinct)


State 40

   54 select_clause: SELECT opt_distinct . select_list from_clause opt_where opt_group

    IDENTIFIER  shift, and go to state 66
    STRING      shift, and go to state 67
    FLOATVAL    shift, and go to state 68
    INTVAL      shift, and go to state 69
    NOT         shift, and go to state 70
    '-'         shift, and go to state 71
    '*'         shift, and go to state 72
    '('         shift, and go to state 73
    '?'         shift, and go to state 74

    select_list       go to state 75
    expr_list         go to state 76
    expr_alias        go to state 77
    expr              go to state 78
    scalar_expr       go to state 79
    unary_expr        go to state 80
    binary_expr       go to state 81
    comp_expr         go to state 82
    function_expr     go to state 83
    column_name       go to state 84
    literal           go to state 85
    string_literal    go to state 86
    num_literal       go to state 87
    int_literal       go to state 88
    star_expr         go to state 89
    placeholder_expr  go to state 90


State 41

   41 update_statement: UPDATE table_ref_name_no_alias . SET update_clause_commalist opt_where

    SET  shift, and go to state 91


State 42

  125 table_ref_name_no_alias: table_name .

    $default  reduce using rule 125 (table_ref_name_no_alias)


State 43

   33 drop_statement: DROP TABLE . table_name

    IDENTIFIER  shift, and go to state 31

    table_name  go to state 92


State 44

   48 select_with_paren: '(' select_with_paren . ')'

    ')'  shift, and go to state 93


State 45

   47 select_with_paren: '(' select_no_paren . ')'

    ')'  shift, and go to state 94


State 46

    0 $accept: input $end .

    $default  accept


State 47

    3 statement_list: statement_list ';' . statement
  141 opt_semicolon: ';' .

    DEALLOCATE  shift, and go to state 1
    TRUNCATE    shift, and go to state 2
    EXECUTE     shift, and go to state 3
    PREPARE     shift, and go to state 4
    CREATE      shift, and go to state 5
    DELETE      shift, and go to state 6
    IMPORT      shift, and go to state 7
    INSERT      shift, and go to state 8
    SELECT      shift, and go to state 9
    UPDATE      shift, and go to state 10
    DROP        shift, and go to state 11
    '('         shift, and go to state 12

    $default  reduce using rule 141 (opt_semicolon)

    statement             go to state 95
    preparable_statement  go to state 16
    prepare_statement     go to state 17
    execute_statement     go to state 18
    import_statement      go to state 19
    create_statement      go to state 20
    drop_statement        go to state 21
    delete_statement      go to state 22
    truncate_statement    go to state 23
    insert_statement      go to state 24
    update_statement      go to state 25
    select_statement      go to state 26
    select_with_paren     go to state 27
    select_no_paren       go to state 28
    select_clause         go to state 29


State 48

    1 input: statement_list opt_semicolon .

    $default  reduce using rule 1 (input)


State 49

   52 set_operator: INTERSECT .

    $default  reduce using rule 52 (set_operator)


State 50

   53 set_operator: EXCEPT .

    $default  reduce using rule 53 (set_operator)


State 51

   65 opt_order: ORDER . BY expr opt_order_type

    BY  shift, and go to state 96


State 52

   51 set_operator: UNION .

    $default  reduce using rule 51 (set_operator)


State 53

   50 select_no_paren: select_clause set_operator . select_clause opt_order opt_limit

    SELECT  shift, and go to state 9

    select_clause  go to state 97


State 54

   49 select_no_paren: select_clause opt_order . opt_limit

    LIMIT  shift, and go to state 98

    $default  reduce using rule 72 (opt_limit)

    opt_limit  go to state 99


State 55

   34 drop_statement: DEALLOCATE PREPARE IDENTIFIER .

    $default  reduce using rule 34 (drop_statement)


State 56

  127 table_name: IDENTIFIER '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 100


State 57

   18 execute_statement: EXECUTE IDENTIFIER '(' . literal_list ')'

    STRING    shift, and go to state 67
    FLOATVAL  shift, and go to state 68
    INTVAL    shift, and go to state 69
    '?'       shift, and go to state 74

    literal_list      go to state 101
    literal           go to state 102
    string_literal    go to state 86
    num_literal       go to state 87
    int_literal       go to state 88
    placeholder_expr  go to state 90


State 58

   15 prepare_statement: PREPARE IDENTIFIER ':' . preparable_statement

    DEALLOCATE  shift, and go to state 1
    TRUNCATE    shift, and go to state 2
    EXECUTE     shift, and go to state 3
    CREATE      shift, and go to state 5
    DELETE      shift, and go to state 6
    IMPORT      shift, and go to state 7
    INSERT      shift, and go to state 8
    SELECT      shift, and go to state 9
    UPDATE      shift, and go to state 10
    DROP        shift, and go to state 11
    '('         shift, and go to state 12

    preparable_statement  go to state 103
    execute_statement     go to state 18
    import_statement      go to state 19
    create_statement      go to state 20
    drop_statement        go to state 21
    delete_statement      go to state 22
    truncate_statement    go to state 23
    insert_statement      go to state 24
    update_statement      go to state 25
    select_statement      go to state 26
    select_with_paren     go to state 27
    select_no_paren       go to state 28
    select_clause         go to state 29


State 59

   16 prepare_statement: PREPARE IDENTIFIER '{' . statement_list opt_semicolon '}'

    DEALLOCATE  shift, and go to state 1
    TRUNCATE    shift, and go to state 2
    EXECUTE     shift, and go to state 3
    PREPARE     shift, and go to state 4
    CREATE      shift, and go to state 5
    DELETE      shift, and go to state 6
    IMPORT      shift, and go to state 7
    INSERT      shift, and go to state 8
    SELECT      shift, and go to state 9
    UPDATE      shift, and go to state 10
    DROP        shift, and go to state 11
    '('         shift, and go to state 12

    statement_list        go to state 104
    statement             go to state 15
    preparable_statement  go to state 16
    prepare_statement     go to state 17
    execute_statement     go to state 18
    import_statement      go to state 19
    create_statement      go to state 20
    drop_statement        go to state 21
    delete_statement      go to state 22
    truncate_statement    go to state 23
    insert_statement      go to state 24
    update_statement      go to state 25
    select_statement      go to state 26
    select_with_paren     go to state 27
    select_no_paren       go to state 28
    select_clause         go to state 29


State 60

   24 opt_not_exists: IF . NOT EXISTS

    NOT  shift, and go to state 105


State 61

   22 create_statement: CREATE TABLE opt_not_exists . table_name FROM TBL FILE file_path
   23                 | CREATE TABLE opt_not_exists . table_name '(' column_def_commalist ')'

    IDENTIFIER  shift, and go to state 31

    table_name  go to state 106


State 62

   35 delete_statement: DELETE FROM table_name . opt_where

    WHERE  shift, and go to state 107

    $default  reduce using rule 60 (opt_where)

    opt_where  go to state 108


State 63

   20 import_file_type: CSV .

    $default  reduce using rule 20 (import_file_type)


State 64

   19 import_statement: IMPORT FROM import_file_type . FILE file_path INTO table_name

    FILE  shift, and go to state 109


State 65

   37 insert_statement: INSERT INTO table_name . opt_column_list VALUES '(' literal_list ')'
   38                 | INSERT INTO table_name . opt_column_list select_no_paren

    '('  shift, and go to state 110

    $default  reduce using rule 40 (opt_column_list)

    opt_column_list  go to state 111


State 66

  105 function_expr: IDENTIFIER . '(' opt_distinct expr ')'
  106 column_name: IDENTIFIER .
  107            | IDENTIFIER . '.' IDENTIFIER

    '('  shift, and go to state 112
    '.'  shift, and go to state 113

    $default  reduce using rule 106 (column_name)


State 67

  111 string_literal: STRING .

    $default  reduce using rule 111 (string_literal)


State 68

  112 num_literal: FLOATVAL .

    $default  reduce using rule 112 (num_literal)


State 69

  114 int_literal: INTVAL .

    $default  reduce using rule 114 (int_literal)


State 70

   87 unary_expr: NOT . expr

    IDENTIFIER  shift, and go to state 66
    STRING      shift, and go to state 67
    FLOATVAL    shift, and go to state 68
    INTVAL      shift, and go to state 69
    NOT         shift, and go to state 70
    '-'         shift, and go to state 71
    '*'         shift, and go to state 72
    '('         shift, and go to state 73
    '?'         shift, and go to state 74

    expr              go to state 114
    scalar_expr       go to state 79
    unary_expr        go to state 80
    binary_expr       go to state 81
    comp_expr         go to state 82
    function_expr     go to state 83
    column_name       go to state 84
    literal           go to state 85
    string_literal    go to state 86
    num_literal       go to state 87
    int_literal       go to state 88
    star_expr         go to state 89
    placeholder_expr  go to state 90


State 71

   86 unary_expr: '-' . expr

    IDENTIFIER  shift, and go to state 66
    STRING      shift, and go to state 67
    FLOATVAL    shift, and go to state 68
    INTVAL      shift, and go to state 69
    NOT         shift, and go to state 70
    '-'         shift, and go to state 71
    '*'         shift, and go to state 72
    '('         shift, and go to state 73
    '?'         shift, and go to state 74

    expr              go to state 115
    scalar_expr       go to state 79
    unary_expr        go to state 80
    binary_expr       go to state 81
    comp_expr         go to state 82
    function_expr     go to state 83
    column_name       go to state 84
    literal           go to state 85
    string_literal    go to state 86
    num_literal       go to state 87
    int_literal       go to state 88
    star_expr         go to state 89
    placeholder_expr  go to state 90


State 72

  115 star_expr: '*' .

    $default  reduce using rule 115 (star_expr)


State 73

   78 expr: '(' . expr ')'

    IDENTIFIER  shift, and go to state 66
    STRING      shift, and go to state 67
    FLOATVAL    shift, and go to state 68
    INTVAL      shift, and go to state 69
    NOT         shift, and go to state 70
    '-'         shift, and go to state 71
    '*'         shift, and go to state 72
    '('         shift, and go to state 73
    '?'         shift, and go to state 74

    expr              go to state 116
    scalar_expr       go to state 79
    unary_expr        go to state 80
    binary_expr       go to state 81
    comp_expr         go to state 82
    function_expr     go to state 83
    column_name       go to state 84
    literal           go to state 85
    string_literal    go to state 86
    num_literal       go to state 87
    int_literal       go to state 88
    star_expr         go to state 89
    placeholder_expr  go to state 90


State 74

  116 placeholder_expr: '?' .

    $default  reduce using rule 116 (placeholder_expr)


State 75

   54 select_clause: SELECT opt_distinct select_list . from_clause opt_where opt_group

    FROM  shift, and go to state 117

    from_clause  go to state 118


State 76

   57 select_list: expr_list .
   74 expr_list: expr_list . ',' expr_alias

    ','  shift, and go to state 119

    $default  reduce using rule 57 (select_list)


State 77

   73 expr_list: expr_alias .

    $default  reduce using rule 73 (expr_list)


State 78

   77 expr_alias: expr . opt_alias
   89 binary_expr: expr . '-' expr
   90            | expr . '+' expr
   91            | expr . '/' expr
   92            | expr . '*' expr
   93            | expr . '%' expr
   94            | expr . '^' expr
   95            | expr . AND expr
   96            | expr . OR expr
   97            | expr . LIKE expr
   98            | expr . NOT LIKE expr
   99 comp_expr: expr . '=' expr
  100          | expr . NOTEQUALS expr
  101          | expr . '<' expr
  102          | expr . '>' expr
  103          | expr . LESSEQ expr
  104          | expr . GREATEREQ expr

    IDENTIFIER  shift, and go to state 120
    NOTEQUALS   shift, and go to state 121
    LESSEQ      shift, and go to state 122
    GREATEREQ   shift, and go to state 123
    LIKE        shift, and go to state 124
    AND         shift, and go to state 125
    NOT         shift, and go to state 126
    AS          shift, and go to state 127
    OR          shift, and go to state 128
    '='         shift, and go to state 129
    '<'         shift, and go to state 130
    '>'         shift, and go to state 131
    '+'         shift, and go to state 132
    '-'         shift, and go to state 133
    '*'         shift, and go to state 134
    '/'         shift, and go to state 135
    '%'         shift, and go to state 136
    '^'         shift, and go to state 137

    $default  reduce using rule 131 (opt_alias)

    alias      go to state 138
    opt_alias  go to state 139


State 79

   79 expr: scalar_expr .

    $default  reduce using rule 79 (expr)


State 80

   80 expr: unary_expr .

    $default  reduce using rule 80 (expr)


State 81

   81 expr: binary_expr .

    $default  reduce using rule 81 (expr)


State 82

   88 binary_expr: comp_expr .

    $default  reduce using rule 88 (binary_expr)


State 83

   82 expr: function_expr .

    $default  reduce using rule 82 (expr)


State 84

   83 scalar_expr: column_name .

    $default  reduce using rule 83 (scalar_expr)


State 85

   85 scalar_expr: literal .

    $default  reduce using rule 85 (scalar_expr)


State 86

  108 literal: string_literal .

    $default  reduce using rule 108 (literal)


State 87

  109 literal: num_literal .

    $default  reduce using rule 109 (literal)


State 88

  113 num_literal: int_literal .

    $default  reduce using rule 113 (num_literal)


State 89

   84 scalar_expr: star_expr .

    $default  reduce using rule 84 (scalar_expr)


State 90

  110 literal: placeholder_expr .

    $default  reduce using rule 110 (literal)


State 91

   41 update_statement: UPDATE table_ref_name_no_alias SET . update_clause_commalist opt_where

    IDENTIFIER  shift, and go to state 140

    update_clause_commalist  go to state 141
    update_clause            go to state 142


State 92

   33 drop_statement: DROP TABLE table_name .

    $default  reduce using rule 33 (drop_statement)


State 93
